[bug] heart doesn't cast shadown otherwise it overlaps with logo

--- a/pinry/static/css/pinry.css
+++ b/pinry/static/css/pinry.css
@@ -318,6 +318,7 @@ textarea {
 .glyphicon-heart {
     font-size: 24px;
     color: #C63120;
+    text-shadow: none;
 }
 
 .navbar-brand {
